--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@
 
 .nft-card{
     background-color: var(--Very-dark-blue-card);
-    width: 25%;
+    width: 360px;
     border-radius: 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
