--- a/styles.css
+++ b/styles.css
@@ -5,37 +5,18 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 /* Vars */
 /* Colors */
 :root{
     /* Primary */
-
     --Soft-blue: hsl(215, 51%, 70%);
     --Cyan: hsl(178, 100%, 50%);
-    
     /* Neutral */
-    
     --Very-dark-blue-bg: hsl(217, 54%, 11%); /* (main BG) */
     --Very-dark-blue-card: hsl(216, 50%, 16%); /* (card BG) */
     --Very-dark-blue-line: hsl(215, 32%, 27%); /* (line) */
     --White: hsl(0, 0%, 100%);
 }
-
-/* Text */
-
-.format__txt{
-    font-family: 'Outfit', sans-serif;
-    font-size: 18px; /* paragraph */
-    /* Weights: 300, 400, 600 */
-}
-
-/* ## Layout */
-
-/* The designs were created to the following widths: */
-
-/* - Mobile: 375px */
-/* - Desktop: 1440px */
 
 .container{
     display: flex;
@@ -58,7 +39,7 @@
     visibility: hidden;
     background-color: var(--Cyan);
     height: 320px;
-    width: 100%;
+    width: 320px;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -77,7 +58,7 @@
     position: absolute;
     margin: 20px;
     height: 320px;
-    width: calc(25% - 40px);
+    width: 320px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -108,6 +89,7 @@
 .nft-view:hover .nft-eye{
     visibility: visible;
 }
+
 .nft-image{
     width: 100%;
     height: 360px;  
